# minicalc

./: Cargo.toml  README.md
src/: config.rs  main.rs  minicalc.rs
src/egui_frontend/: app.rs  config.rs  mod.rs
src/math/: base.rs  equation.rs  mod.rs  operation.rs  parsefmt.rs
src/term_frontend/: main.rs
