[package]
name = "minicalc"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.3.0"
clap = { version = "4.4.16", features = ["derive"] }
crossterm = "0.27.0"
eframe = "0.25.0"
num-bigint = { version = "0.4.4", features = ["arbitrary"] }
num-rational = { version = "0.4.1" }
num-traits = "0.2.17"
platform-dirs = "0.3.0"
ron = "0.8.1"
serde = { version = "1.0.195", features = ["derive"] }
#rust_decimal = "1.33.1"
#rust_decimal_macros = "1.33.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
